style: fix search bar border alignment and rounding in dark and light mode

--- a/src/components/search/index.component.scss
+++ b/src/components/search/index.component.scss
@@ -10,8 +10,35 @@
     width: 650px;
     max-width: 95%;
     background: #fff;
-    border-radius: 5px;
+    border-radius: 8px;
     overflow: hidden;
+
+    ::ng-deep .ant-input-group-wrapper {
+      border: 1px solid #d9d9d9;
+      border-radius: 8px;
+      overflow: hidden;
+      transition: all 0.3s;
+      
+      &:hover, &:focus-within {
+        border-color: #40a9ff;
+        box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+      }
+      
+      .ant-input-wrapper {
+        display: flex;
+      }
+      
+      .ant-input-group-addon {
+        border: none;
+        border-right: 1px solid #f0f0f0;
+        background: transparent;
+      }
+      
+      .ant-input {
+        border: none;
+        box-shadow: none !important;
+      }
+    }
 
     input {
       padding-left: 10px;
@@ -44,44 +71,52 @@
 
 :host-context(.dark-container) {
   .input-wrapper {
-    background-color: #fff !important;
-    border: none !important;
+    background-color: transparent !important;
+
+    ::ng-deep .ant-input-group-wrapper {
+      border: 1px solid rgba(255, 255, 255, 0.4) !important;
+      background-color: transparent !important;
+      
+      &:hover, &:focus-within {
+        border-color: rgba(255, 255, 255, 0.8) !important;
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.1);
+      }
+      
+      .ant-input-group-addon {
+        background-color: transparent !important;
+        border-right: 1px solid rgba(255, 255, 255, 0.2) !important;
+      }
+      
+      .ant-input {
+        background-color: transparent !important;
+      }
+    }
 
     input {
-      color: #333 !important;
+      color: #fff !important;
       &::placeholder,
       &::-webkit-input-placeholder,
       &::-moz-placeholder,
       &:-ms-input-placeholder {
-        color: #999 !important;
+        color: rgba(255, 255, 255, 0.7) !important;
       }
     }
 
     .search-icon {
-      color: #666 !important;
+      color: #fff !important;
       opacity: 0.8;
     }
 
     .left-icon {
-      filter: none;
+      filter: drop-shadow(0 0 1px rgba(255,255,255,0.8));
     }
 
     ::ng-deep .ant-select-selection-item {
-      color: #333 !important;
+      color: #fff !important;
     }
     
     ::ng-deep .ant-select-arrow {
-      color: #999 !important;
-    }
-
-    ::ng-deep .ant-input-group-addon {
-      background-color: #fff !important;
-      border-color: #eee !important;
-    }
-    
-    ::ng-deep .ant-input {
-      background-color: transparent !important;
-      border-color: transparent !important;
+      color: rgba(255, 255, 255, 0.7) !important;
     }
   }
 }
